<resources>
    <string name="app_name">Pop Movies</string>
    <string name="title_activity_list">@string/app_name</string>
    <string name="loading_title">Loading…</string>
    <string name="title_activity_detail">Movie</string>
    <string name="movie_poster">Movie poster</string>
    <string name="error_movie_not_exists">Sorry, but that movie doesn\'t exist at all</string>
    <string name="error_movies_wrong_data">Sorry, but the movies couldn\'t be opened</string>
    <string name="error_empty_favs">Check some movies and click on the heart to fav it!</string>
    <string name="error_no_connection">Internet is not available</string>
    <string name="error_no_connection_sb">Internet is not available. Showing cached data</string>
    <string name="try_reloading">Try again</string>
    <string name="movie_rating_out_of">%1$s/10</string>
    <string name="sub_highest_rated">Highest rated movies</string>
    <string name="sub_popular">Most popular movies</string>
    <string name="sub_fav">Favorite movies</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_show">Show…</string>
    <string name="menu_show_highest_rated">Show highest rated</string>
    <string name="menu_show_favs">Favorites only</string>
    <string name="menu_show_popular">Show popular movies</string>
    <string name="tmdb_date_format">yyyy-MM-dd</string>
    <string name="human_date_format">MMMM dd, yyyy</string>
    <string name="page_details">Details</string>
    <string name="page_videos">Videos</string>
    <string name="page_reviews">Reviews</string>
    <string name="no_reviews">There are no reviews for this movie</string>
    <string name="no_videos">There are no videos for this movie</string>
</resources>
