<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_filter_list_24dp"
        android:title="@string/menu_show"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/showFavs"
                android:icon="@drawable/ic_favorite_24dp"
                android:title="@string/menu_show_favs" />
            <item
                android:id="@+id/sortPopularity"
                android:icon="@drawable/ic_thumb_up_24dp"
                android:title="@string/menu_show_popular" />
            <item
                android:id="@+id/sortHighRated"
                android:icon="@drawable/ic_star_24dp"
                android:title="@string/menu_show_highest_rated" />
        </menu>
    </item>
</menu>